Entire Flow Working

--- a/tvf_project_new/tvf_app/test_requests/templates/test_requests/quality_update_tvf.html
+++ b/tvf_project_new/tvf_app/test_requests/templates/test_requests/quality_update_tvf.html
@@ -42,7 +42,7 @@
 
         <div class="d-flex justify-content-between mt-4">
             <button type="submit" name="action" value="process" class="btn btn-success">
-                <i class="fas fa-arrow-alt-circle-right"></i> Validate (Push to Logistics)
+                <i class="fas fa-arrow-alt-circle-right"></i> Validate Quality / Push to Logistics
             </button>
             <button type="submit" name="action" value="reject" class="btn btn-danger">
                 <i class="fas fa-times-circle"></i> Reject TVF
