--- a/tvf_project_new/tvf_app/templates/base.html
+++ b/tvf_project_new/tvf_app/templates/base.html
@@ -18,18 +18,24 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'test_requests:list' %}">TVF Management</a>
+            {# The brand link now points to the dashboard as well #}
+            <a class="navbar-brand" href="{% url 'test_requests:coach_dashboard' %}">TVF Management</a> 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
+                        {# This is the new Dashboard link #}
+                        <a class="nav-link" href="{% url 'test_requests:coach_dashboard' %}">Dashboard</a> 
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'test_requests:list' %}">All TVFs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'test_requests:create' %}">New TVF</a>
                     </li>
+                    {# Add more navigation links here as your app grows #}
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
