--- a/tvf_project_new/tvf_app/test_requests/templates/test_requests/base.html
+++ b/tvf_project_new/tvf_app/test_requests/templates/test_requests/base.html
@@ -1,7 +1,5 @@
 {# tvf_app/templates/base.html #}
 {% load static %} {# Load static files tag #}
-{% load custom_filters %} {# Load custom filters for dict access #}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,8 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {# Custom CSS #}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {# Font Awesome for icons (if used) #}
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -30,6 +26,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'test_requests:create' %}">New TVF</a>
                     </li>
+                    {# Add more navigation links here as your app grows #}
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
